2006-10-20  Bastien Nocera  <hadess@hadess.net>

	* macros2/gnome-autogen.sh: exit from the check_m4macros function as
	soon as we have detected some undefined macros, rather than leaving
	the developer wondering what the problem is

2006-05-10  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-common.spec.in: Fix a typo.

2006-03-10  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh (configure_files): skip directories
	called "_darcs", similar to the handling of other VCS metadata
	dirs.  Fixes bug #321860.

2005-10-24  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh (configure_files): update find
	expression to not exclude ".." from search.  Fixes non-srcdir
	builds (where $srcdir might be "..").  Fixes bug #319496.

2005-09-20  Stepan Kasal  <kasal@ucw.cz>

	* macros2/gnome-autogen.sh: Prefer newer versions of Automake.
	From bug #305641.

2005-09-20  James Henstridge  <james@jamesh.id.au>

	* configure.in: bump version to 2.12.0

	* macros2/gnome-autogen.sh (configure_files): when searching for
	configure.in files, skip directories starting with a dot.  This
	avoids Bzr, Quilt and Subversion bookkeeping directories among
	others.  Fixes bug #311951.

2005-08-17  Stepan Kasal  <kasal@ucw.cz>

	* macros2/gnome-autogen.sh (add_to_cm_macrodirs): New function,
	prevents duplicates in $cm_macrodirs.
	(check_m4macros): Use it.  Read the dirlist file, if it is supported
	by the version of Automake actually in use.

2005-08-17  Stepan Kasal  <kasal@ucw.cz>

	* macros2/gnome-autogen.sh (version_check): Set $variable_VERSION
	  to the actual version number of the tool.

2005-08-17  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: pass --force to gnome-doc-prepare to
	match other tools.  Fixes bug #311775.

	* macros2/gnome-autogen.sh: don't use syntax that non-GNU greps
	don't understand.  Fixes bug #313531.

2005-08-16  James Henstridge  <james@jamesh.id.au>
